CRUD for decks and cards

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -22,6 +22,7 @@
   @extend .link-secondary
 }
 
+// Spinner from the https://loading.io/css/. To make it visible I changed `background` to `#ddd`
 .lds-spinner {
   color: official;
   display: inline-block;
@@ -42,7 +43,7 @@
   width: 6px;
   height: 18px;
   border-radius: 20%;
-  background: #fff;
+  background: #ddd;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
